--- a/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
@@ -6,3 +6,7 @@ profile_show:
     path:     /{slug}
     defaults: { _controller: ActedLegalDocsBundle:Profile:show }
     methods:  GET
+profile_offers_list:
+    path:     /{slug}/offer
+    defaults: { _controller: ActedLegalDocsBundle:Profile:offers }
+    methods:  GET
