added base64 file uploading

--- a/src/Acted/LegalDocsBundle/Resources/config/routing.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing.yml
@@ -25,3 +25,7 @@ acted_legal_docs_profile:
 acted_legal_docs_offer:
   resource: "@ActedLegalDocsBundle/Resources/config/routing/offer.yml"
   prefix: /profile
+
+acted_legal_docs_user:
+  resource: "@ActedLegalDocsBundle/Resources/config/routing/user.yml"
+  prefix: /user
