refactored controllers; fixed routing

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/user.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/user.yml
@@ -1,4 +1,4 @@
-profile_edit:
+user_edit:
     path:     /edit
     defaults: { _controller: ActedLegalDocsBundle:User:edit }
     methods:  [PATCH]
