fixed invalid entities mapping

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -34,6 +34,7 @@ Acted\LegalDocsBundle\Entity\Artist:
     oneToOne:
         user:
           targetEntity: Acted\LegalDocsBundle\Entity\User
+          inversedBy: artist
     oneToMany:
         ratings:
           targetEntity: Acted\LegalDocsBundle\Entity\ArtistRating
