--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Offer.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Offer.orm.yml
@@ -29,4 +29,5 @@ Acted\LegalDocsBundle\Entity\Offer:
     manyToOne:
         performance:
           targetEntity: Acted\LegalDocsBundle\Entity\Performance
+          inversedBy: offers
     lifecycleCallbacks: {  }
