--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
@@ -17,6 +17,7 @@ Acted\LegalDocsBundle\Entity\Performance:
     manyToOne:
         profile:
           targetEntity: Acted\LegalDocsBundle\Entity\Profile
+          inversedBy: performances
     oneToMany:
         offers:
           targetEntity: Acted\LegalDocsBundle\Entity\Offer
