--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -10,3 +10,10 @@ services:
             - { name: doctrine.event_subscriber, connection: default }
         calls:
             - [ setAnnotationReader, [ "@annotation_reader" ] ]
+    app.twig_extension:
+        class: Acted\LegalDocsBundle\Twig\Extension\AppExtension
+        public: false
+        tags:
+            - {name: twig.extension}
+        calls:
+            - [ setEntityManager, [ "@doctrine.orm.entity_manager" ] ]
