--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
@@ -16,6 +16,10 @@ Acted\LegalDocsBundle\Entity\Category:
             type: string
             length: 255
             unique: true
+        image:
+            type: string
+            length: 255
+            nullable: true
         lft:
             type: integer
             gedmo:
