added embed/embed library; added thumbnail for videos

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Media.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Media.orm.yml
@@ -26,4 +26,7 @@ Acted\LegalDocsBundle\Entity\Media:
         active:
           type: boolean
           notnull: true
+        thumbnail:
+          type: string(256)
+          nullable: true
     lifecycleCallbacks: {  }
