--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "cocur/slugify": "^2.0",
         "davidbadura/faker-bundle": "^1.1",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "gedmo/doctrine-extensions": "^2.4"
+        "gedmo/doctrine-extensions": "^2.4",
+        "embed/embed": "^2.6"
 
     },
     "require-dev": {
