--- a/src/Acted/LegalDocsBundle/Resources/config/routing.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing.yml
@@ -30,6 +30,8 @@ acted_legal_docs_user:
   resource: "@ActedLegalDocsBundle/Resources/config/routing/user.yml"
   prefix: /user
 
+acted_legal_docs_security:
+    resource: "@ActedLegalDocsBundle/Resources/config/routing/security.yml"
 acted_legal_docs_media:
   resource: "@ActedLegalDocsBundle/Resources/config/routing/media.yml"
   prefix: /media
