added Media to User Profile

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Media.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Media.orm.yml
@@ -36,5 +36,8 @@ Acted\LegalDocsBundle\Entity\Media:
     manyToMany:
         performances:
           targetEntity: Acted\LegalDocsBundle\Entity\Performance
+          mappedBy: media:
+        profiles:
+          targetEntity: Acted\LegalDocsBundle\Entity\Profile
           mappedBy: media
     lifecycleCallbacks: {  }
