added Add Media to Profile feature

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/profile.yml
@@ -22,6 +22,10 @@ profile_feedbacks_list:
     path:     /{slug}/feedback
     defaults: { _controller: ActedLegalDocsBundle:Profile:feedbacks }
     methods:  GET
+profile_new_media:
+    path:    /{slug}/media/new
+    defaults: { _controller: ActedLegalDocsBundle:Profile:newMedia }
+    methods:  POST
 profile_add_media:
     path:    /{slug}/media/{id}
     defaults: { _controller: ActedLegalDocsBundle:Profile:addMedia }
