fixed offer delettion

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Offer.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Offer.orm.yml
@@ -30,4 +30,6 @@ Acted\LegalDocsBundle\Entity\Offer:
         performance:
           targetEntity: Acted\LegalDocsBundle\Entity\Performance
           inversedBy: offers
+          joinColumn:
+            onDelete: CASCADE
     lifecycleCallbacks: {  }
