added slug to Categories

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
@@ -16,6 +16,9 @@ Acted\LegalDocsBundle\Entity\Category:
             type: string
             length: 255
             unique: true
+        slug:
+            type: string(255)
+            unique: true
         image:
             type: string
             length: 255
