--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,5 @@
 acted_legal_docs:
     resource: "@ActedLegalDocsBundle/Resources/config/routing.yml"
     prefix:   /
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
