--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "embed/embed": "^2.6",
         "knpuniversity/guard-bundle": "~0.1@dev",
         "jms/serializer": "^1.1",
-        "jms/serializer-bundle": "^1.1"
+        "jms/serializer-bundle": "^1.1",
+        "liip/imagine-bundle": "^1.5"
 
     },
     "require-dev": {
