added description to categories

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
@@ -19,6 +19,9 @@ Acted\LegalDocsBundle\Entity\Category:
         slug:
             type: string(255)
             unique: true
+        description:
+            type: text
+            nullable: true
         image:
             type: string
             length: 255
