--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -20,3 +20,7 @@ services:
     app.form_login_authenticator:
         class: Acted\LegalDocsBundle\Security\FormLoginAuthenticator
         arguments: ["@service_container"]
+
+    app.user.manager:
+        class: Acted\LegalDocsBundle\Model\UserManager
+        arguments: ["@security.encoder_factory", "@doctrine.orm.entity_manager"]
