--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
@@ -35,6 +35,9 @@ Acted\LegalDocsBundle\Entity\User:
         background:
           type: string(256)
           nullable: true
+        confirmationToken:
+          type: string(255)
+          nullable: true
     oneToOne:
         profile:
           targetEntity: Acted\LegalDocsBundle\Entity\Profile
@@ -42,5 +45,9 @@ Acted\LegalDocsBundle\Entity\User:
         artist:
           targetEntity: Acted\LegalDocsBundle\Entity\Artist
           mappedBy: user
+    manyToMany:
+        roles:
+          targetEntity: Acted\LegalDocsBundle\Entity\RefRole
+          inversedBy: users
 
     lifecycleCallbacks: {  }
