added email confirmation; !!! IMPORTANT: parameters.yml updated

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/security.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/security.yml
@@ -2,6 +2,14 @@ security_login:
     path:     /login
     defaults: { _controller: "ActedLegalDocsBundle:Security:login" }
 
+security_register:
+    path:     /register
+    defaults: { _controller: "ActedLegalDocsBundle:Security:register" }
+
+security_confirm:
+    path:     /confirm/{token}
+    defaults: { _controller: "ActedLegalDocsBundle:Security:confirm" }
+
 security_login_check:
     path:     /login_check
     defaults: { _controller: "ActedLegalDocsBundle:Security:loginCheck" }
