--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -31,5 +31,5 @@ monolog:
         #    type:   chromephp
         #    level:  info
 
-#swiftmailer:
-#    delivery_address: me@example.com
+swiftmailer:
+    delivery_address: "%mailer_delivery_address%"
