--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -23,4 +23,10 @@ services:
 
     app.user.manager:
         class: Acted\LegalDocsBundle\Model\UserManager
-        arguments: ["@security.encoder_factory", "@doctrine.orm.entity_manager"]
+        arguments:
+          - "@security.encoder_factory"
+          - "@doctrine.orm.entity_manager"
+          - "@mailer"
+          - "@templating.engine.twig"
+          - "@router"
+          - "%mailer_from_address%"
