modified User Entity

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
@@ -23,12 +23,14 @@ Acted\LegalDocsBundle\Entity\User:
         primaryPhone:
           type: string(32)
           unique: true
+          nullable: true
         secondaryPhone:
           type: string(32)
           nullable: true
         active:
           type: boolean
-          notnull: true
+          options:
+            default: false
         avatar:
           type: string(256)
           nullable: true
