--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,7 @@ security:
 
         main:
             anonymous: ~
+            logout: true
             knpu_guard:
                 authenticators:
                   - app.form_login_authenticator
