--- a/src/Acted/LegalDocsBundle/Resources/config/routing/security.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/security.yml
@@ -14,3 +14,7 @@ security_confirm:
 security_login_check:
     path:     /login_check
     defaults: { _controller: "ActedLegalDocsBundle:Security:loginCheck" }
+
+security_logout:
+    path:     /logout
+    defaults: { _controller: "ActedLegalDocsBundle:Security:logout" }
