--- a/src/Acted/LegalDocsBundle/Resources/config/validation/Artist.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/validation/Artist.yml
@@ -4,3 +4,5 @@ Acted\LegalDocsBundle\Entity\Artist:
       - NotBlank: ~
       - Length:
           min: 3
+  constraints:
+    - Symfony\Bridge\Doctrine\Validator\Constraints\UniqueEntity: slug
