--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,3 +3,6 @@ acted_legal_docs:
     prefix:   /
 _liip_imagine:
     resource: "@LiipImagineBundle/Resources/config/routing.xml"
+NelmioApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix:   /api/doc
