--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "knpuniversity/guard-bundle": "~0.1@dev",
         "jms/serializer": "^1.1",
         "jms/serializer-bundle": "^1.1",
-        "liip/imagine-bundle": "^1.5"
+        "liip/imagine-bundle": "^1.5",
+        "nelmio/api-doc-bundle": "^2.12"
 
     },
     "require-dev": {
