added Form Errors Serializer

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -30,3 +30,6 @@ services:
           - "@templating.engine.twig"
           - "@router"
           - "%mailer_from_address%"
+
+    app.form_errors_serializer:
+        class: Acted\LegalDocsBundle\FormErrors\FormErrorsSerializer
