--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Category.orm.yml
@@ -26,6 +26,10 @@ Acted\LegalDocsBundle\Entity\Category:
             type: string
             length: 255
             nullable: true
+        background:
+            type: string
+            length: 255
+            nullable: true
         lft:
             type: integer
             gedmo:
