--- a/composer.json
+++ b/composer.json
@@ -9,35 +9,35 @@
     },
     "require": {
         "php": ">=5.5.8",
-        "symfony/symfony": "2.8.*",
+        "symfony/symfony": "v2.8.4",
         "ext-curl": "*",
         "ext-fileinfo": "*",
-        "doctrine/orm": "^2.4.8",
-        "doctrine/doctrine-bundle": "~1.4",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~5.0",
-        "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0",
+        "doctrine/orm": "v2.5.4",
+        "doctrine/doctrine-bundle": "1.6.2",
+        "symfony/swiftmailer-bundle": "v2.3.11",
+        "symfony/monolog-bundle": "v2.10.0",
+        "sensio/distribution-bundle": "v5.0.5",
+        "sensio/framework-extra-bundle": "v3.0.16",
+        "incenteev/composer-parameter-handler": "2.1.2",
         "doctrine/doctrine-migrations-bundle": "1.1.1",
-        "tfox/mpdf-port-bundle": "1.3.*",
+        "tfox/mpdf-port-bundle": "1.3.1",
         "stfalcon/tinymce-bundle": "dev-master",
-        "cocur/slugify": "^2.0",
-        "davidbadura/faker-bundle": "^1.1",
-        "knplabs/knp-paginator-bundle": "^2.5",
-        "gedmo/doctrine-extensions": "^2.4",
-        "embed/embed": "^2.6",
-        "knpuniversity/guard-bundle": "~0.1@dev",
-        "jms/serializer": "^1.1",
-        "jms/serializer-bundle": "^1.1",
-        "liip/imagine-bundle": "^1.5",
-        "nelmio/api-doc-bundle": "^2.12"
+        "cocur/slugify": "v2.0",
+        "davidbadura/faker-bundle": "1.1.0",
+        "knplabs/knp-paginator-bundle": "2.5.1",
+        "gedmo/doctrine-extensions": "v2.4.13",
+        "embed/embed": "v2.6.8",
+        "knpuniversity/guard-bundle": "0.3",
+        "jms/serializer": "1.1.0",
+        "jms/serializer-bundle": "1.1.0",
+        "liip/imagine-bundle": "1.5.2",
+        "nelmio/api-doc-bundle": "2.12.0"
 
     },
     "require-dev": {
-        "sensio/generator-bundle": "~3.0",
-        "symfony/phpunit-bridge": "~2.7",
-        "doctrine/doctrine-fixtures-bundle": "^2.3"
+        "sensio/generator-bundle": "3.0.6",
+        "symfony/phpunit-bridge": "v2.8.4",
+        "doctrine/doctrine-fixtures-bundle": "2.3.0"
     },
     "scripts": {
         "post-install-cmd": [
