--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
         "jms/serializer-bundle": "1.1.0",
         "liip/imagine-bundle": "1.5.2",
         "nelmio/api-doc-bundle": "2.12.0",
-        "willdurand/geocoder": "^3.3"
+        "willdurand/geocoder": "^3.3",
+        "friendsofsymfony/rest-bundle": "^1.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.0.6",
