added coordinates to Regions

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefRegion.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefRegion.orm.yml
@@ -13,6 +13,14 @@ Acted\LegalDocsBundle\Entity\RefRegion:
           type: string(128)
           notnull: true
           unique: true
+        latitude:
+          type: decimal
+          scale: 8
+          nullable: true
+        longitude:
+          type: decimal
+          scale: 8
+          nullable: true
     manyToOne:
         country:
           targetEntity: Acted\LegalDocsBundle\Entity\RefCountry
