--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Homespotlight.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Homespotlight.orm.yml
@@ -17,3 +17,5 @@ Acted\LegalDocsBundle\Entity\Homespotlight:
     manyToOne:
         media:
             targetEntity: Acted\LegalDocsBundle\Entity\Media
+            onDelete: CASCADE
+            inversedBy: homespotlights
