--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefRegion.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefRegion.orm.yml
@@ -21,6 +21,10 @@ Acted\LegalDocsBundle\Entity\RefRegion:
           type: decimal
           scale: 8
           nullable: true
+    oneToMany:
+        cities:
+          targetEntity: Acted\LegalDocsBundle\Entity\RefCity
+          mappedBy: region
     manyToOne:
         country:
           targetEntity: Acted\LegalDocsBundle\Entity\RefCountry
