--- a/src/Acted/LegalDocsBundle/Resources/config/services.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/services.yml
@@ -2,12 +2,18 @@ services:
     contract_type:
         class: Acted\LegalDocsBundle\Services\ContractTypeService
         arguments: ["@service_container", "@tfox.mpdfport"]
+        calls:
+          - [setSavePath, ['%performancecontract_dir%']]
         folder: %kernel.root_dir%
     invoice_type:
         class: Acted\LegalDocsBundle\Services\InvoiceTypeService
         arguments: ["@service_container", "@tfox.mpdfport"]
+        calls:
+            - [setSavePath, ['%invoice_dir%']]
         folder: %kernel.root_dir%
     quotation_type:
         class: Acted\LegalDocsBundle\Services\QuotationTypeService
         arguments: ["@service_container", "@tfox.mpdfport"]
+        calls:
+            - [setSavePath, ['%quotation_dir%']]
         folder: %kernel.root_dir%
