--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,3 +23,6 @@ parameters:
     per_page: 3
     resetting.token_ttl: 86400
     image_upload_dir: images
+    performancecontract_dir: docs/performance_contract
+    invoice_dir: docs/invoice
+    quotation_dir: docs/quotation
