--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "liip/imagine-bundle": "1.5.2",
         "nelmio/api-doc-bundle": "2.12.0",
         "willdurand/geocoder": "^3.3",
-        "friendsofsymfony/rest-bundle": "^1.7"
+        "friendsofsymfony/rest-bundle": "^1.7",
+        "beberlei/DoctrineExtensions": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.0.6",
