--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Profile.orm.yml
@@ -44,6 +44,5 @@ Acted\LegalDocsBundle\Entity\Profile:
         performances:
           targetEntity: Acted\LegalDocsBundle\Entity\Performance
           mappedBy: profile
-
-
+          orderBy: { 'id': 'DESC' }
     lifecycleCallbacks: {  }
