--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/PerformanceContract.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/PerformanceContract.orm.yml
@@ -141,4 +141,11 @@ Acted\LegalDocsBundle\Entity\PerformanceContract:
             options:
                 fixed: false
             column: client_name
+        pdf_path:
+            type: string
+            nullable: true
+            length: 255
+    manyToOne:
+        event:
+            targetEntity: Acted\LegalDocsBundle\Entity\Event
     lifecycleCallbacks: {  }
