--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/QuotationType.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/QuotationType.orm.yml
@@ -259,4 +259,11 @@ Acted\LegalDocsBundle\Entity\QuotationType:
             precision: 9
             scale: 2
             column: total_amount
+        pdf_path:
+             type: string
+             nullable: true
+             length: 255
+    manyToOne:
+        event:
+            targetEntity: Acted\LegalDocsBundle\Entity\Event
     lifecycleCallbacks: {  }
