--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "nelmio/api-doc-bundle": "2.12.0",
         "willdurand/geocoder": "^3.3",
         "friendsofsymfony/rest-bundle": "^1.7",
-        "beberlei/DoctrineExtensions": "^1.0"
+        "beberlei/DoctrineExtensions": "^1.0",
+        "misd/phone-number-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "3.0.6",
