--- a/src/Acted/LegalDocsBundle/Resources/config/routing/security.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/security.yml
@@ -26,3 +26,8 @@ security_resetting_request:
 security_resetting_reset:
     path:     /resetting/reset/{token}
     defaults: { _controller: "ActedLegalDocsBundle:Security:reset" }
+
+security_check_email:
+    path: /is_email_exists/{email}
+    defaults: { _controller: ActedLegalDocsBundle:Security:isEmailExists }
+    methods: GET
