added artist search group by categories

--- a/src/Acted/LegalDocsBundle/Resources/config/routing.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing.yml
@@ -43,7 +43,7 @@ acted_legal_docs_geo:
 
 acted_legal_docs_artist:
   resource: "@ActedLegalDocsBundle/Resources/config/routing/artist.yml"
-  prefix: /artist
+  prefix: /
 
 acted_legal_docs_search:
   path: /search
