--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefCity.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefCity.orm.yml
@@ -15,11 +15,13 @@ Acted\LegalDocsBundle\Entity\RefCity:
           unique: true
         latitude:
           type: decimal
-          scale: 8
+          scale: 12
+          precision: 18
           nullable: true
         longitude:
           type: decimal
-          scale: 8
+          scale: 12
+          precision: 18
           nullable: true
     manyToOne:
         region:
